# TA-reverse

./: .gitignore  README.md  build_and_strip.sh  globalConfig.json  pyproject.toml
.github/: CONTRIBUTING.md  FUNDING.yml
.github/workflows/: mypy.yml  package-splunk-app.yml  pylint.yml
package/: app.manifest
package/default/: commands.conf  searchbnf.conf
package/lib/: requirements.txt
