

[tool.poetry]
name = "ta-reverse"
version = "0.0.1"
description = ""
authors = ["James Hodgkinson <james@terminaloutcomes.com>"]
readme = "README.md"
packages = []

[tool.poetry.dependencies]
python = "^3.8"
splunk-sdk = "^2.0.1"

[tool.poetry.group.dev.dependencies]
mypy = "^1.10.0"
ruff = "^0.4.4"
black = "^24.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.ruff]
line-length = 120